:zap: feat: adding make file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@
 services:
   arcs-db:
     container_name: arcs-db
+#    image: docker.arvancloud.ir/bitnami/postgresql:17.5.0
     image: bitnami/postgresql:17.5.0
     restart: always
     environment:
@@ -13,7 +14,9 @@ services:
       - "5440:5432"
 
   redis:
+#    image: docker.arvancloud.ir/bitnami/redis:8.0.2
     image: bitnami/redis:8.0.2
+    container_name: redis
     hostname: redis
     restart: always
     environment:
@@ -23,7 +26,9 @@ services:
       - "6380:6379"
 
   nats:
-    image: docker.arvancloud.ir/nats:latest
+#    image: nats:2.11.4
+    image: docker.arvancloud.ir/nats:2.11.4
+    container_name: nats
     command: ["-js"]
     ports:
       - "4222:4222"
