--- a/config.example.yaml
+++ b/config.example.yaml
@@ -5,6 +5,7 @@ basic:
   #  Environment: dev
   insert-batch-size: 300
   pending-process-batch-size: 100
+  republish-lock-duration: 5
 
 database:
   connection_string: host=localhost port=5440 user=admin dbname=arcs password=pass sslmode=disable TimeZone=Asia/Tehran
@@ -16,9 +17,9 @@ redis:
 
 nats:
   url: localhost:4222
-  client-timeout: 5
-  reconnect-wait: 3
-  max-reconnects: 3
+  client-timeout: 2
+  reconnect-wait: 5
+  max-reconnects: -1
   retry-timeout: 10
   stream: sms
   queue: sends
