--- a/worker-config-example.yaml
+++ b/worker-config-example.yaml
@@ -1,3 +1,6 @@
+database:
+  connection_string: host=localhost port=5440 user=admin dbname=arcs password=pass sslmode=disable TimeZone=Asia/Tehran
+
 nats:
   url: localhost:4222
   client-timeout: 5
