--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ services:
     container_name: manager
     restart: always
     ports:
-      - '8088:8088'
+      - "8088:8088"
     depends_on:
       arcs-db:
         condition: service_healthy
@@ -68,3 +68,19 @@ services:
       timeout: 5s
       retries: 5
       start_period: 5s
+
+  worker:
+    build:
+      context: .
+      dockerfile: Dockerfile.worker
+    container_name: worker
+    restart: always
+    depends_on:
+      arcs-db:
+        condition: service_healthy
+      nats:
+        condition: service_started
+      manager:
+        condition: service_healthy
+    volumes:
+      - /home/mahdi/Projects/Arcs/worker-config.yaml:/config/worker-config.yaml
